bynkc/tests/fixtures/negative/310_http_limits_invalid_field/src/api.bynk
context api

service api from http {
  limits {
    maxBody: 1.5,
  }

  on GET("/ping") () -> Effect[HttpResult[String]] by v: Visitor {
    Ok("pong")
  }
}
